--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <label for="result"><b>Result:</b></label>
                     <p id="result"></p>
                 </div>
+                <!-- buttons -->
                 <div class="row4 rows">
                     <input type="button" onclick="add();" value="Add">
                     <input type="button" onclick="sub();" value="Subtract">
